--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>TimeSheet</title>
-    <!-- Required meta tags -->
+    <title>Train Scheduler</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -11,25 +10,27 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-           
     <script type="text/javascript" src="logic.js"></script>
-
-
 </head>
 
 <body>
 
     <header>Train Schedule</header>
+
     <div class="card">
+
         <div class="card-header">
             Current Train Schedule
         </div>
+
         <div class="card-body">
             <div id="timesheetHeader">
                 <div class="row">
@@ -46,6 +47,7 @@
             </div>
         </div>
     </div>
+
     <div class="card">
         <div class="card-header">
             Add Train
@@ -60,7 +62,7 @@
                 <input type="text" class="form-control" id="destination">
             </div>
             <div class="form-group">
-            <label class="form-check-label" for="firstTrain">First Train Time (HH:mm - military time)</label>
+            <label class="form-check-label" for="firstTrain">First Train Time</label>
                 <input type='time' class="form-control" id='firstTrain'/>
             </div>
 
@@ -71,9 +73,6 @@
             <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
         </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 </body>
 </html>
