--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="form-group">
                 <label for="freq">Frequency(min)</label>
-                <input type="number" class="form-control" id="freq" placeholder="Enter role">
+                <input type="number" class="form-control" id="freq">
             </div>
             <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
         </div>
